--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
-.row .col{
-    border: 1.2px solid rgb(85, 85, 85);
-    border-radius: 5px;
+table{
+    table-layout: fixed;
+    margin-left: auto;
+    margin-right: auto;
 
-    color:rgb(0, 0, 0);
-
-    text-align: center;
+    background-color: #92c1d3;
 }
 
-
-#calc{
+button{
     background-color: rgb(229, 238, 241);
-    width: 25%;
-    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+}
+
+td{
+    border: 1.2px solid black;
+    text-align: center;
+    border-radius: 20px;
+}
+th{
+    border: 1.2px solid black;
+    text-align: center;
+    border-radius: 20px;
+
 }
 
