--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+
+}
 table{
     table-layout: fixed;
     margin-left: auto;
     margin-right: auto;
 
-    background-color: #92c1d3;
+    background-color: #1c87b1;
 }
 
 button{
-    background-color: rgb(229, 238, 241);
+    background-color: rgb(188, 223, 235);
     width: 100%;
     height: 100%;
+    
 }
 
 td{
-    border: 1.2px solid black;
     text-align: center;
-    border-radius: 20px;
 }
 th{
-    border: 1.2px solid black;
+    color: rgb(87, 255, 205);
     text-align: center;
-    border-radius: 20px;
+    background-color: rgb(43, 72, 90);
+
+    border: 1.5px solid rgb(121, 121, 121);
 
 }
 
